--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/hibernate_demo_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/security_app_db
 spring.datasource.username=postgres
 spring.datasource.password=rootroot
 
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.show_sql=true
 
 
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
